# quick-app-template

./: .gitignore  CLAUDE.md  README.md  compose.yml  cookiecutter.json  docker-compose.yml
.elasticbeanstalk/: config.yml
.elasticbeanstalk/saved_configs/: default.cfg.yml
.github/workflows/: deploy.yml  security.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  package.json
frontend/src/: APITester.tsx
hooks/: post_gen_project.py
plans/: floofy-plotting-quail.md  phase2-migration-eb-to-apprunner.md  quiet-twirling-cloud.md  tingly-giggling-naur.md  vast-humming-balloon.md
plans/eb-to-terraform/: 00-master-plan.md  01-terraform-infrastructure.md  02-deployment-script.md  03-cicd-and-docs.md
proxy/: Dockerfile
scripts/: deploy.sh
{{cookiecutter.project_slug}}/.elasticbeanstalk/: config.yml
{{cookiecutter.pypi_package_name}}/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
{{cookiecutter.pypi_package_name}}/backend/: CLAUDE.md  Dockerfile  README.md  database.py  main.py  pyproject.toml
{{cookiecutter.pypi_package_name}}/backend/alembic/: env.py
{{cookiecutter.pypi_package_name}}/backend/alembic/versions/: 0001_create_note_table.py
{{cookiecutter.pypi_package_name}}/backend/app/: __init__.py  auth.py  config.py  database.py  models.py  secrets.py
{{cookiecutter.pypi_package_name}}/backend/app/routes/: auth.py  health.py  hello.py
{{cookiecutter.pypi_package_name}}/backend/tests/: conftest.py  test_auth.py  test_dev_auth.py  test_health.py  test_hello.py
(+82 files in other folders)
