[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]==0.121.1",
    "Authlib==1.6.5",
    {% if cookiecutter.include_database %}
    "psycopg2-binary==2.9.9",
    "sqlmodel==0.0.31",
    {% endif %}
]
